# oreum_template

./: .envrc  .gitignore  .pre-commit-config.yaml  .sqlfluff  000_ExampleNotebookStructure.ipynb  CONTRIBUTORS.md  LICENSE.md  LICENSES_THIRD_PARTY.md  Makefile  README.md  condaenv_oreum_template.yml  jupyter_install.sh  oreum_template.code-workspace  pip_install.sh  pip_requirements.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  rebase_deps.yml
data/: README_DATA.md
data/raw/: hash_verbatim_files.sh
notebook_renders/: classic.tplx
notebooks/: 000_ExampleNotebookStructure.ipynb
notebooks/renders/: config_pdf.py  config_slides.py  config_webpdf.py
notebooks/renders/slides-oemplus/: index.html.jinja
notebooks/renders/slides-oemplus/static/: simple.css
src/engine/: logger.py
